# IFEM-PoroElasticity

./: CMakeLists.txt  SIMDynPoroElasticity.h  main.C
PoroElastic/: CMakeLists.txt  NewmarkPoroSIM.C  PoroElasticity.C  PoroElasticity.h  PoroMaterial.C  PoroMaterial.h  PoroMaterialTexture.C  PoroMaterialTexture.h  PoroMats.C  PoroSolutions.C  PoroSolutions.h  SIMPoroElasticity.C  SIMPoroElasticity.h  SIMThermoPoroElasticity.h  TextureProperties.C  TextureProperties.h  ThermoPoroElasticity.C
Test/: EightCells.g2  MaterialImage.xinp  OGSBenchmark1D-LR.reg  OGSBenchmark1D-nonmixed.reg  OGSBenchmark1D-nonmixed.xinp  OGSBenchmark1D.reg  OGSBenchmark1D.xinp  Plaxis1DVerif-LR.reg  Plaxis1DVerif-nonmixed.reg  Plaxis1DVerif-nonmixed.xinp  Plaxis1DVerif.reg  Plaxis1DVerif.xinp  SoilColumn3D-nonmixed.hdf5  SoilColumn3D.hdf5  Terzhagi.hdf5  TestSIMPoroElasticity.C  geom.g2  vanskelig.g2  vanskelig.xinp
